k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flame-dating
  labels:
    app: flame
